--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
                   
+asgiref==3.3.1
+bootstrap4==0.1.0
+certifi==2020.11.8
+cloudinary==1.22.0
+dj-database-url==0.5.0
+Django==3.1.3
+django-bootstrap3==14.2.0
+django-heroku==0.3.1
+gunicorn==20.0.4
+importlib-metadata==1.7.0
+Pillow==8.0.1
+psycopg2==2.8.6
+python-decouple==3.3
+six==1.15.0
+sqlparse==0.4.1
+urllib3==1.26.2
+whitenoise==5.2.0
+zipp==3.4.0
