--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-                  
 asgiref==3.3.1
 bootstrap4==0.1.0
 certifi==2020.11.8
@@ -12,6 +11,7 @@ importlib-metadata==1.7.0
 Pillow==8.0.1
 psycopg2==2.8.6
 python-decouple==3.3
+pytz==2020.5
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.2
